--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,18 @@
 	<description>API Utama Bootcamp JuaraCoding</description>
 
 	<properties>
+		<cloud.version>4.1.3</cloud.version>
 		<java.version>21</java.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>${cloud.version}</version>
+		</dependency>
+
 		<!-- START OF DEPENDENCY SPRING SECURITY -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -38,12 +46,12 @@
 			<version>0.9.1</version>
 		</dependency>
 
-<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.springdoc</groupId>-->
-<!--			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
-<!--			<version>2.6.0</version>-->
-<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
